<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JLI Resources</string>
    <string name="doubleBackToExit">Please press BACK again to exit.</string>
    <string name="msgQuitApp">Do you want to quit app?</string>
    <string name="timeStart">00:00</string>
    <string name="searching">Search&#8230;</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="getListSongs">Get list songs&#8230;</string>
    <string name="downloadComplete">Download successfully!</string>
    <string name="songExisted">This song is existed in SD Card.</string>
    <string name="noFoundMatch">No result is found !</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="dd">đ</string>
    <string name="DD">Đ</string>
    <string name="please_wait_message">Please wait&#8230;</string>
    <string name="server_error">There is an error from server, please try again.</string>
    <string name="json_server_error">Communication error. Please try again!</string>
    <string name="song_error">There is an error playing this song. The next song will play in 3 seconds</string>

    <!-- Menu -->
    <string name="music">MUSIC</string>
    <string name="audio">Audio</string>
    <string name="dashboard">Marketing Calendar</string>
    <string name="feedback">Feedback</string>
    <string name="catalog">Catalog</string>
    <string name="chatJLI">Chat With JLI</string>
    <string name="menu_header">JLI Mobile Resources</string>
    <string name="log_in">Login</string>
    <string name="suggested_tracks">Suggested Tracks</string>
    <string name="collections">Collections</string>
    <string name="desktop">Desktop</string>
    <string name="courses">Lesson Recordings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="tool">Tools</string>
    <string name="topChart">Top Songs</string>
    <string name="allSong">All Songs</string>
    <string name="nominations">Nomination</string>
    <string name="album">Albums</string>
    <string name="categoryMusic">Categories</string>
    <string name="playlist">Playlist</string>
    <string name="forum">Forum</string>
    <string name="goodApp">Good app</string>
    <string name="settings">Settings</string>
    <string name="exitApp">Exit app</string>
    <string name="forgot_pass">Forgot your password?</string>

    <!-- Message -->
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="loading">Loading&#8230;</string>
    <string name="noNetwork">Network is not available.</string>
    <string name="enableRepeat">Enable repeat mode.</string>
    <string name="offRepeat">Off repeat mode.</string>
    <string name="enableShuffle">Enable shuffle mode.</string>
    <string name="offShuffle">Off shuffle mode.</string>
    <string name="msgRestartApp">Restart app to complete change language.</string>
    <string name="endPage">No more data.</string>
    <string name="loadmore_success">New page is loaded successfully!</string>
    <string name="sort_by_id">Sort by Date</string>
    <string name="sort_by_views">Sort by Views</string>
    <string name="sort_by_download">Sort by Download</string>

    <!-- Setting -->
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download">Make available offline</string>
    <string name="Share">Share as..</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_as_alarm">Set as Alarm</string>
    <string name="set_as_notification">Set as Notification</string>
    <string name="set_as_contact_ringtone">Set as Contact</string>

    <!-- Setting -->
    <string name="language">Language</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="about">About</string>

    <!-- About -->
    <string name="company">HiCom Solutions</string>
    <string name="companyDescription1">Provides Android, iOS, Web Source Codes and Development Services.</string>
    <string name="companyDescription2">Highly Committed to Quality Products and Excellent Services.</string>
    <string name="companyWebsite"><u>http://hicomsolutions.com.au</u></string>

    <!-- Playlist -->
    <string name="creatNewPlaylist">Create new playlist</string>
    <string name="playlistName">Playlist name</string>
    <string name="chooseSong">Select song</string>
    <string name="choosePlaylist">Select Playlist</string>
    <string name="gcm_SenderId">701638227223</string>
    <string name="intercom_gcm_sender_id">701638227223</string>
    <!--  Error -->

    <string-array name="arrayLanguage">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>